fixed otherpage line gap

--- a/language.css
+++ b/language.css
@@ -40,6 +40,10 @@
 span {
   color: #de115f;
 }
+span:hover {
+  color: #de115f;
+  text-decoration: underline;
+}
 .imagpart2::after {
   content: "";
   background-image: url(https://taleninstituut.nl/wp-content/themes/ysd-wandconsulting/assets/dist/images/play-btn.svg);
@@ -175,7 +179,7 @@ span {
 .c-usp-icone {
   display: flex;
   flex-direction: column;
-  border: 3px solid #fff;
+  border: 2px solid #ffffff;
   border-radius: 15px;
   padding: 15px;
   height: 98%;
@@ -208,6 +212,13 @@ span {
   background-color: #ffffff;
   border-color: #de115f;
   border-radius: 40px;
+}
+.btn-primary:hover {
+  color: #ffffff;
+  background-color: #de115f;
+  border-color: #de115f;
+  border-radius: 40px;
+  transition: .8s;
 }
 /* =======for clind==== */
 .line3 ul {
@@ -361,4 +372,7 @@ span {
     max-width: 100% !important;
     height: 141px !important;
 }
+}
+.forsmallsreenGap{
+  margin-bottom: 19px;
 }
